--- a/package.json
+++ b/package.json
@@ -3,14 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-react": "^2.3.0",
+    "@paypal/react-paypal-js": "^8.8.2",
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@tanstack/react-query": "^5.66.9",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.9",
+    "firebase": "^11.4.0",
+    "flag-icons": "^7.3.2",
+    "formic": "^0.0.10",
+    "formik": "^2.4.6",
+    "i18next": "^24.2.2",
+    "i18next-browser-languagedetector": "^8.0.4",
+    "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
+    "react-i18next": "^15.4.1",
+    "react-icons": "^5.5.0",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "shadcn-ui": "^0.9.5",
+    "web-vitals": "^2.1.4",
+    "yup": "^1.6.1",
+    "zustand": "^5.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,5 +55,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "ajv": "^7.2.4",
+    "daisyui": "^4.12.24",
+    "tailwindcss": "^3.4.17"
   }
 }
